js/src/jit/shared/LIR-x86-shared.h
@@ -114,6 +114,25 @@ class LModI : public LBinaryMath<1>
     }
 };
 
+// Modulo of a number by itself. Returns 0 unless the number is zero.
+class LModSelfI : public LInstructionHelper<1, 1, 0>
+{
+  public:
+    LIR_HEADER(ModSelfI)
+
+    LModSelfI(const LAllocation &op) {
+        setOperand(0, op);
+    }
+
+    const LAllocation *op() {
+        return getOperand(0);
+    }
+
+    MMod *mir() const {
+        return mir_->toMod();
+    }
+};
+
 // This class performs a simple x86 'div', yielding either a quotient or remainder depending on
 // whether this instruction is defined to output eax (quotient) or edx (remainder).
 class LUDivOrMod : public LBinaryMath<1>
