js/src/jit/x64/LOpcodes-x64.h
@@ -16,6 +16,7 @@
     _(DivSelfI)                     \
     _(ModI)                         \
     _(ModPowTwoI)                   \
+    _(ModSelfI)                     \
     _(PowHalfD)                     \
     _(AsmJSUInt32ToDouble)          \
     _(AsmJSUInt32ToFloat32)         \
